<resources>
    <string name="app_name">PregnantBase</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">База пациентов</string>
    <string name="nav_header_subtitle">РодДом №10 ЖК№26 участок №{0}</string>
    <string name="nav_header_subtitle_all">РодДом №10 ЖК№26. Все пациентки</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_list">Список</string>
    <string name="nav_search">Поиск</string>
    <string name="nav_add">Добавить</string>
    <string name="detail_fioTextView">ФИО</string>
    <string name="detail_birthdayTextView">Дата рождения</string>
    <string name="detail_phoneTextView">Телефон</string>
    <string name="detail_pmTextView">ПМ</string>
    <string name="detail_tire">-</string>
    <string name="detail_Scr_check">Проведён</string>
    <string name="detail_fScr">I скр</string>
    <string name="detail_sScr">II скр</string>
    <string name="detail_tScr">III скр</string>
    <string name="detail_save">Сохранить</string>
    <string name="detail_thirtyWeeks">30 недель</string>
    <string name="detail_fortyWeeks">40 недель</string>
    <string name="detail_back">Назад</string>
    <string name="detail_correct">Скорректировать</string>
    <string name="detail_corrSave">Записать</string>
    <string name="detail_Scr_uncheck">Не проведён</string>
    <string name="search_button">ФИО</string>
    <string name="action_search">Поиск</string>
    <string name="search_button_fScr">I скр</string>
    <string name="search_button_sScr">II скр</string>
    <string name="search_button_tScr">III скр</string>
    <string name="search_button_scr">Скр</string>
    <string name="risk">Риск</string>
    <string name="multiplicity">Многоплодность</string>
    <string name="release">Родила</string>
    <string name="notRelease">Не родила</string>
    <string name="todayTime">Срок на сегодня</string>
    <string name="weeks">нед.</string>
    <string name="days">дн.</string>
    <string name="date">Дата</string>
    <string name="srok">Срок</string>
    <string name="release_date">Дата родов</string>
    <string name="baby">Ребёнок</string>
    <string name="gender">пол</string>
    <string name="weight">вес</string>
    <string name="height">рост</string>
    <string name="fioEx">Фамилия, имя и отчество</string>
    <string name="inputFormatDate">ДДММГГ</string>
    <string name="inputFormatWeeks">НН</string>
    <string name="inputFormatDays">ДД</string>
    <string name="releasedList">Родившие</string>
    <string name="adTitle">Удаление записи</string>
    <string name="adMessage">Удалить?</string>
    <string name="adBtn1">Да</string>
    <string name="adBtn2">Нет</string>
    <string name="Screening">Скрининг</string>
    <string name="pdf">PDF</string>
    <string name="comment">Комментарий</string>
    <string name="correction">Корректировка</string>
    <string name="back">Назад</string>
    <string name="saved">Сохранено</string>
    <string name="enterPM">Введите ПМ</string>
    <string name="error">Ошибка</string>
    <string name="age">Возраст:</string>
    <string name="maintenance">Обслуживание</string>
    <string name="incorrectBirthdayDate">ДР не верна</string>
    <string name="phoneHint">89991234567</string>
    <string name="reset">Сброс</string>
    <string name="search_switch_act">Сортировка по началу СКР</string>
    <string name="search_switch_Nact">Сортировка по концу СКР</string>
    <string name="export_import_db">Export/Import DB</string>
    <string name="export_db">Export</string>
    <string name="import_db">Import</string>
    <string name="district_choose">Выбор участка</string>
    <string name="district_start">Начать</string>
    <string name="dist_no">Уч №</string>
    <string-array name="risks">
        <item>-</item>
        <item>низкий</item>
        <item>средний</item>
        <item>высокий</item>
    </string-array>
    <string-array name="gender">
        <item>М</item>
        <item>Ж</item>
    </string-array>
    <string-array name="search">
        <item>ФИО</item>
        <item>СКР</item>
        <item>I СКР</item>
        <item>II СКР</item>
        <item>III СКР</item>
        <item>Срок</item>
    </string-array>
    <string-array name="districts">
        <item>Все</item>
        <item>Участок 1</item>
        <item>Участок 2</item>
        <item>Участок 3</item>
        <item>Участок 4</item>
        <item>Участок 5</item>
        <item>Участок 6</item>
        <item>Участок 7</item>
        <item>Участок 8</item>
        <item>Участок 9</item>
        <item>Участок 10</item>
        <item>Участок 11</item>
        <item>Участок 12</item>
    </string-array>
</resources>
