<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_detail_pdf"
        android:icon="@drawable/ic_pdf"
        android:orderInCategory="1"
        android:title="@string/pdf"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_detail_save"
        android:icon="@drawable/ic_save"
        android:orderInCategory="2"
        android:title="@string/detail_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_detail_edit"
        android:icon="@drawable/ic_edit"
        android:orderInCategory="3"
        android:title="@string/detail_correct"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_detail_add"
        android:icon="@drawable/ic_add"
        android:orderInCategory="4"
        android:title="@string/nav_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_detail_back"
        android:icon="@drawable/ic_back"
        android:orderInCategory="5"
        android:title="@string/back"
        app:showAsAction="ifRoom" />
</menu>