<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_add" />

        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_search" />

        <item
            android:id="@+id/list"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_list" />

        <item
            android:id="@+id/released"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/releasedList" />
    </group>

</menu>
