<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    tools:context=".view.MaintFragment">

    <TextView
        android:id="@+id/maint_importExportTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/export_import_db"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/maint_DB_Import_Export"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/maint_importExportTextView"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/maint_export"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/export_db" />

        <Button
            android:id="@+id/maint_import"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/import_db" />

    </LinearLayout>

    <Button
        android:id="@+id/maint_district"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/maint_DB_Import_Export"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Проставить участок"/>


</RelativeLayout>